<resources>
    <string name="app_name">Khabar</string>
    <string name="hint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="tvSortedBy">Sorted By</string>
    <string name="newsDeskValues">News Desk Values</string>
    <string name="Fashion"><![CDATA[Fashion & Style]]></string>
    <string name="Sports">Sports</string>

    <string name="sortedBy_prompt">Choose sorting order !</string>
    <string name="chkbxPrevious">Apply To Previous Search Result</string>

    <string-array name="sortedBy">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
