<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-5dp"
        android:background="#ADD8E6">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Khabar"
            android:textColor="#000066"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="left"
            />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Begin Date"
        android:layout_below="@+id/toolbar"
        android:id="@+id/tvBeginDate"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="01-01-2000"
        android:id="@+id/tvDate"
        android:layout_alignTop="@+id/tvBeginDate"
        android:layout_marginLeft="80dp"
        android:paddingTop="20dp"
        android:layout_toRightOf="@+id/tvBeginDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvSortedBy"
        android:id="@+id/tvSortedBy"
        android:layout_below="@+id/tvBeginDate"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/tvDate"
        android:gravity="left"
        android:layout_alignBottom="@+id/tvSortedBy"
        android:layout_alignLeft="@+id/tvDate"
        android:spinnerMode="dropdown"
        android:entries="@array/sortedBy"
        android:prompt="@string/sortedBy_prompt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newsDeskValues"
        android:id="@+id/tvCheckbox"
        android:layout_below="@+id/tvSortedBy"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkbxArts"
        android:layout_below="@+id/spinner"
        android:layout_alignLeft="@+id/tvDate"
        android:layout_alignTop="@+id/tvCheckbox"
        android:checked="false"
        android:text="Arts" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkbxFashion"
        android:layout_below="@+id/chkbxArts"
        android:layout_alignLeft="@+id/chkbxArts"
        android:checked="false"
        android:text="@string/Fashion" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkbxSports"
        android:layout_below="@+id/chkbxFashion"
        android:layout_alignLeft="@+id/chkbxFashion"
        android:checked="false"
        android:text="@string/Sports" />

</RelativeLayout>